[package]
name = "iroh-mdns-address-lookup"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "mDNS-based address lookup for iroh"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-address-lookups"
homepage = "https://github.com/n0-computer/iroh-address-lookups"
documentation = "https://docs.rs/iroh-mdns-address-lookup"
keywords = ["iroh", "mdns", "swarm-discovery", "address-lookup"]
categories = ["network-programming"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.89"

[lints]
workspace = true

[dependencies]
data-encoding = "2"
derive_more = { version = "2.0", features = ["debug"] }
futures-util = "0.3"
iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "main" }
iroh-base = { git = "https://github.com/n0-computer/iroh.git", branch = "main", default-features = false, features = ["key"] }
n0-error = "0.1"
n0-future = "0.3"
n0-watcher = "0.6"
swarm-discovery = "0.6"
tokio = { version = "1", features = ["rt", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
n0-tracing-test = "0.3"
rand = "0.10"
rand_chacha = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "iroh_docsrs"]
